<resources>
    <string name="app_name">BakalarkaSmokingApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="more_btn">Show all stats</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="health_progress_title">Health progress</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_mission">Missions</string>
    <string name="title_cravings">Cravings</string>
    <string name="title_journal">Journal</string>
    <string name="days">\ days</string>
    <string name="hours">\ hours</string>
    <string name="minutes">\ min</string>
    <string name="seconds">\ sec</string>
    <string name="time_progress">Time progress</string>
    <string name="health_improvements">Health improvements</string>
    <string name="wishes_manager_title">Wishes Manager</string>
    <string name="money_saved_title">Money saved</string>
    <string name="main_progress_show_detail">Show detail</string>
    <string name="main_progress_detail_title">Time without smoking</string>
    <string name="empty"></string>
    <string name="congratulation">Congratulation</string>
    <string name="share">Share</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="welcome_title">Vitajte</string>
    <string name="welcome_desc">Je úžasné, že ste sa rozhodli skoncovať s fajčením. Volám sa Juraj Macák a budem Vaším sprievodcom. Tak ako som to dokázal ja, dokážete to aj Vy. Verím, že moje skúsenosti, ktoré som premietol do tejto aplikácie pomôžu nad zlozvykom vyhrať a učinia Váš život zdravším a plnohodnotnejším</string>
    <string name="cigarettes_in_package_desc">Začneme s počtom cigariet v balíku, ktorý si kupujete.</string>
    <string name="cigarettes_smoked"> Cigarretes smoked per day</string>
    <string name="cigarettes_smoked_desc">Začneme s počtom cigariet, ktoré vyfajčíte každý deň.</string>
    <string name="cigarettes_in_package"> Cigarettes in packet</string>
    <string name="cost"> cost one packet</string>
    <string name="preffered_currency"> my preffered currency</string>
    <string name="stop">Stop smoking now !</string>
    <string name="next_button">Next</string>
    <string name="start_app">Start App</string>
    <string name="change_color">Change color</string>
    <string name="settings_title">Settings</string>
    <string name="change_color_title">Change color</string>
    <string name="cigarettes_smoked_every_day">Cigarettes per day</string>
    <string name="cigarettes_in_packet">Cigarettes in packet</string>
    <string name="packet_cost">Packet cost</string>
    <string name="currency">Currency</string>
    <string name="smoking_preferences">Smoking preferences</string>
    <string name="yes">Yes</string>
    <string name="cancel">No</string>
    <string name="no">No</string>
    <string name="set_value">Set value : </string>
    <string name="application_settings">Application settings</string>
    <string name="factory_reset">Factory reset</string>
    <string name="factory_reset_desc">Prajete si aplikáciu vrátuť do továrenských nastavéní (údaje budu vymazané) ?</string>
    <string name="feedback_title">Feedback</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="do_you_like_missions">Do you like missions ?</string>
    <string name="do_you_like_cravings">Do you like cravings ?</string>
    <string name="mission_tips">Mission tips</string>
    <string name="craving_tips">Craving tips</string>
    <string name="type_tips">Type tips ...</string>
    <string name="what_would_you_change">What would you change on this app ?</string>
    <string name="write_ideas">Write ideas ...</string>
    <string name="submit_feedback">Submit feedback</string>
    <string name="add_wish">Add wish</string>
    <string name="you_have_no_wishes_now">You have no wishes now !</string>
    <string name="wish_hint_name">Name</string>
    <string name="wish_hint_price">Price</string>
    <string name="wish_hint_description">Description</string>
    <string name="show_wishes">Show wishes</string>
    <string name="edit_wish">Edit Wish</string>
    <string name="can_buy_it">I can buy it</string>
    <string name="price">Price : </string>
    <string name="bought">Bought</string>
    <string name="not_specified_place">Not specified place</string>
    <string name="title_activity_craving_map">Map</string>
    <string name="tap_to_save_craving">Tap to save craving</string>
    <string name="cravings_title">Cravings</string>
    <string name="show_craving_preferences">Show craving preferences</string>
    <string name="show_all_cravings">Show all cravings</string>
    <string name="map_of_cravings">Map of Cravings</string>
    <string name="first_aid">First Aid</string>
    <string name="go_to_objectives">Go to the objectives</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_undone">Mark as undone</string>
    <string name="objectives">Objectives - </string>
    <string name="completion_time">Completion time :</string>
    <string name="mission">Mission</string>
    <string name="pastel_template">Pastel template</string>
    <string name="dark_green_color">Relax template</string>
    <string name="blue_ocean_template">Blue ocean</string>
    <string name="wine_template">Wine</string>
    <string name="banana_template">Banana</string>
    <string name="error_name">Missing name</string>
    <string name="error_price">Missing price</string>
    <string name="error_desc">Missing description</string>
    <string name="error_image">Missing image</string>
    <string name="write_a_title">Write a title</string>
    <string name="write_a_description">Write a description</string>
    <string name="congratulation_walkthrough">Congratulation, your are on your way to stop smoking.</string>
    <string name="add_your_own_card">Add your own card</string>
    <string name="add_card">Add card</string>
    <string name="entry_write">Write entry</string>
    <string name="entry_read">Read entry</string>
    <string name="locked">Locked</string>
    <string name="story_title">Story for day :</string>
    <string name="no_smoked">Odmeny za vydržaný čas</string>
    <string name="missions_complete">Odmeny za splnené misie</string>
    <string name="achievments_noSmoked_one_title">Ste skvelý!</string>
    <string name="achievments_noSmoked_one_desc">Vydržali ste prvý deň!</string>
    <string name="achievments_noSmoked_three_title">Perfektné!</string>
    <string name="achievments_noSmoked_three_desc">Už 3 dni nefajčíte, citíte ten rozdiel?</string>
    <string name="achievments_noSmoked_seven_title">Ste na správnej ceste</string>
    <string name="achievments_noSmoked_seven_desc">Najťažší týždeň máte za sebou, len tak ďalej!</string>
    <string name="achievments_noSmoked_twelve_title">Bližíte sa do finále</string>
    <string name="achievments_noSmoked_twelve_desc">Vybudovali ste si silnú vôľu prestať fajčiť</string>
    <string name="achievments_noSmoked_twentyone_title">Dokázali ste to!</string>
    <string name="achievments_noSmoked_twentyone_desc">Gratulujem, stali ste sa nefajčiarom</string>
    <string name="achievment_complete">You complete</string>
    <string name="missions">missions.</string>
    <string name="activity_1_title">Give water 1</string>
    <string name="activity_1_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 1</string>
    <string name="activity_2_title">Give water 2</string>
    <string name="activity_2_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 2</string>
    <string name="activity_3_title">Give water 3</string>
    <string name="activity_3_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 3</string>
    <string name="activity_4_title">Give water 4</string>
    <string name="activity_4_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 4</string>
    <string name="activity_5_title">Give water 5</string>
    <string name="activity_5_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 5</string>
    <string name="activity_6_title">Give water 6</string>
    <string name="activity_6_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 6</string>
    <string name="activity_7_title">Give water 7</string>
    <string name="activity_7_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 7</string>
    <string name="activity_8_title">Give water 8</string>
    <string name="activity_8_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 8</string>
    <string name="activity_9_title">Give water 9</string>
    <string name="activity_9_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 9</string>
    <string name="activity_10_title">Give water 10</string>
    <string name="activity_10_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 10</string>
    <string name="activity_11_title">Give water 11</string>
    <string name="activity_11_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 11</string>
    <string name="activity_12_title">Give water 12</string>
    <string name="activity_12_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 12</string>
    <string name="activity_13_title">Give water 13</string>
    <string name="activity_13_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 13</string>
    <string name="activity_14_title">Give water 14</string>
    <string name="activity_14_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 14</string>
    <string name="activity_15_title">Give water 15</string>
    <string name="activity_15_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 15</string>
    <string name="activity_16_title">Give water 16</string>
    <string name="activity_16_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 16</string>
    <string name="activity_17_title">Give water 17</string>
    <string name="activity_17_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 17</string>
    <string name="activity_18_title">Give water 18</string>
    <string name="activity_18_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 18</string>
    <string name="activity_19_title">Give water 19</string>
    <string name="activity_19_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 19</string>
    <string name="activity_20_title">Give water 20</string>
    <string name="activity_20_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 20</string>
    <string name="activity_21_title">Give water 21</string>
    <string name="activity_21_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 21</string>
    <string name="activity_22_title">Give water 22</string>
    <string name="activity_22_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 22</string>
    <string name="activity_23_title">Give water 23</string>
    <string name="activity_23_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 23</string>
    <string name="activity_24_title">Give water 24</string>
    <string name="activity_24_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 24</string>
    <string name="activity_25_title">Give water 25</string>
    <string name="activity_25_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 25</string>
    <string name="activity_26_title">Give water 26</string>
    <string name="activity_26_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 26</string>
    <string name="activity_27_title">Give water 27</string>
    <string name="activity_27_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 27</string>
    <string name="activity_28_title">Give water 28</string>
    <string name="activity_28_desc">Give water asbdasdasbidasbasjdboasdnkasldnlasndasldknsald 28</string>
    <string name="activity_29_title">Give water 29</string>
</resources>