<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.stanislavcavajda.bakalarkasmokingapp.Dashboard.WishManager.AddWishActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/add_wish_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/add_wish"
        app:titleTextColor="@color/white">
    </android.support.v7.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/add_wish_image"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/add_wish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_wish_toolbar" />

    <EditText
        android:id="@+id/title_text"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:hint="@string/wish_hint_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_wish_image"
        app:layout_constraintTop_toTopOf="@+id/add_wish_image" />

    <EditText
        android:id="@+id/price_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:hint="@string/wish_hint_price"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/add_wish_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_wish_image"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <EditText
        android:id="@+id/desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/wish_hint_description"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/add_wish_image"
        app:layout_constraintTop_toBottomOf="@+id/add_wish_image" />

    <Button
        android:id="@+id/add_wish_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        android:text="@string/add_wish"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
