<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000">

    <android.support.v7.widget.Toolbar
        android:id="@+id/add_card_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/add_card"
        app:titleTextColor="@color/white">
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/unselectedBarColor"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/add_card"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_card_toolbar"
        app:layout_constraintVertical_chainStyle="spread">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:id="@+id/image_card"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="?colorPrimary"
                app:cardCornerRadius="22.5dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/category_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/koloda_item1" />
            </android.support.v7.widget.CardView>

            <EditText
                android:id="@+id/card_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:hint="@string/write_a_title"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@+id/image_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_card"
                app:layout_constraintTop_toTopOf="@+id/image_card" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="8dp"
                android:background="@color/light_grey"
                app:layout_constraintEnd_toEndOf="@+id/card_title"
                app:layout_constraintStart_toStartOf="@+id/image_card"
                app:layout_constraintTop_toBottomOf="@+id/image_card" />

            <EditText
                android:id="@+id/card_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/write_a_description"
                android:singleLine="false"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/card_title"
                app:layout_constraintStart_toStartOf="@+id/image_card"
                app:layout_constraintTop_toBottomOf="@+id/view" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/add_card"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ripple_effect"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/add_card"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:textColor="?colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />
</android.support.constraint.ConstraintLayout>